--- a/nb/ode-integration.ipynb
+++ b/nb/ode-integration.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Coupled ODE Integration\n",
     "\n",
-    "This notebook demonstrates integration of coupled ODEs and numerical integration of arrays of values in Python using a physicall motivated example.\n",
+    "This notebook demonstrates integration of coupled ODEs and numerical integration of arrays of values in Python using a physically motivated example.\n",
     "\n",
     "## A Ballistic Trajectory with Drag\n",
     "\n",
